--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
-    "jest-fetch-mock": "^3.0.3",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "jest-fetch-mock": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
@@ -39,6 +37,8 @@
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "workbox-webpack-plugin": "^6.3.0"
   }
